--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,16 @@ minversion = 3.10.0
 envlist = py38, py39, py310
 isolated_build = true
 
+[gh-actions]
+python = 
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+
 [testenv]
 setenv = 
     PYTHONPATH = {toxinidir}
