--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-minversion = 3.10.0
-; envlist = {py38, py39, py310}
+envlist = py38,py39,py310
 isolated_build = true
 
 [gh-actions]
@@ -17,6 +16,6 @@ python =
 setenv = 
     PYTHONPATH = {toxinidir}
 deps = 
-    -r {toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_dev.txt
 commands = 
     pytest --basetemp={envtmpdir}
