--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,13 @@
 name: Tests
 
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
       matrix:
@@ -19,6 +20,7 @@ jobs:
           - macos-10.15
         python-version: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.10']
 
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,7 +29,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade setuptools pip wheel
+        python -m pip install --upgrade setuptools pip wheel tox
         python -m pip install tox-gh-actions
     - name: Test with tox
       run: tox
