--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 [tox]
-envlist = py38,py39,py310
+envlist = py37,py38,py39,py310
 isolated_build = true
 
 [gh-actions]
 python = 
-    2.7: py27
-    3.5: py35
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
