Remove old python versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,11 +13,7 @@ classifiers =
     Intended Audience :: Users
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -38,7 +34,7 @@ testing =
 minversion = 3.7
 isolated_build = true
 skip_missing_interpreters = true
-envlist = py27,py35,py36,py37,py38,py39,py310
+envlist = py37,py38,py39,py310
 
 [testenv]
 description = run test suite under {basepython}
