--- a/setup.cfg
+++ b/setup.cfg
@@ -14,14 +14,14 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 zip_safe = True
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+python_requires = !=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*
 install_requires = tox >=3.14
 setup_requires = setuptools_scm[toml] >=5
 
@@ -34,7 +34,7 @@ testing =
 minversion = 3.7
 isolated_build = true
 skip_missing_interpreters = true
-envlist = py37,py38,py39,py310
+envlist = py38,py39,py310, py311
 
 [testenv]
 description = run test suite under {basepython}
