--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,8 @@
-pytest==7.1.1
-tox==3.14.3
+pytest
+tox
 numpy==1.24.4
-setuptools==41.2.0
-requests==2.22.0
+setuptools
+requests
 pandas==1.3.5
-beautifulsoup4==4.11.1
-lxml==4.8.0
+beautifulsoup4
+lxml
