--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        pip install -r requirements_dev.txt
         python -m pip install --upgrade setuptools pip wheel tox
         python -m pip install tox-gh-actions
     - name: Test with tox
