--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 zip_safe = True
@@ -34,7 +35,7 @@ testing =
 minversion = 3.7
 isolated_build = true
 skip_missing_interpreters = true
-envlist = py38,py39,py310, py311
+envlist = py38,py39,py310, py311, py312
 
 [testenv]
 description = run test suite under {basepython}
