Update setup.cfg file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ciphers
-description = Module for ciphering and deciphering messages
+description = A package that makes it easy to play around with different ciphering and deciphering algorithms
 maintainer = Norbert Acedański
 author = Norbert Acedański
 url = https://github.com/norbert-acedanski/ciphers
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.12
 
 [options]
+packages = ciphers
 zip_safe = True
 python_requires = !=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*
 install_requires = tox >=3.14
