Fix intended audience classifiers.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ license_file = LICENSE
 classifiers = 
     Development Status :: 5 - Production/Stable
     Framework :: tox
-    Intended Audience :: Users
+    Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
