--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
           - ubuntu-24.04
           - windows-2019
           - windows-2022
-          - macos-12
           - macos-13
           - macos-14
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+          - macos-15
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
         exclude:
           - platform: ubuntu-24.04
             python-version: '3.8'
