--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
 
 [options]
 packages = ciphers
@@ -35,7 +36,7 @@ testing =
 minversion = 3.8
 isolated_build = true
 skip_missing_interpreters = true
-envlist = py38, py39, py310, py311, py312
+envlist = py38, py39, py310, py311, py312, py313
 
 [testenv]
 description = run test suite under {basepython}
