--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,3 +42,5 @@ jobs:
         python -m pip install tox-gh-actions
     - name: Test with tox
       run: tox
+
+# Runner images: https://github.com/actions/runner-images
