--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,11 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - ubuntu-20.04
           - ubuntu-22.04
           - ubuntu-24.04
           - windows-2019
           - windows-2022
+          - windows-2025
           - macos-13
           - macos-14
           - macos-15
