--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,9 +24,9 @@ jobs:
           - macos-14
           - macos-15
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
-        exclude:
-          - platform: ubuntu-24.04
-            python-version: '3.8'
+#        exclude:
+#          - platform: ubuntu-24.04
+#            python-version: '3.8'
 
     runs-on: ${{ matrix.platform }}
     steps:
